# oop

./: CMakeLists.txt
models/headers/: Cell.h  Constants.h  Game.h  Map.h  Painter.h  Segment.h  Ship.h  ShipManager.h
models/sources/: Cell.cpp  Constants.cpp  Coordinate.сpp  Game.cpp  Map.cpp  Painter.cpp  Segment.cpp  Ship.cpp  ShipManager.cpp
